--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
 streamlit==1.32.0
+numpy==1.26.4
 pandas==2.2.1
+geopandas==0.14.3
+db_dtypes==1.2.0
+plotly-express==0.4.1
+google-auth==2.28.2
+google-cloud-bigquery==3.18.0
+plotly==5.19.0
