--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit==1.32.0
+streamlit==1.37.1
 numpy==1.26.4
 pandas==2.2.1
 geopandas==0.14.3
@@ -7,3 +7,4 @@ plotly-express==0.4.1
 google-auth==2.28.2
 google-cloud-bigquery==3.18.0
 plotly==5.19.0
+watchdog==4.0.2
